--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -25,7 +25,7 @@
         
         <div class="container mt-5">
             <div class="row row-cols-1 row-cols-md-2 g-4">
-                {% for _ in "123456" %}
+                {% for post_ in posts %}
                 <div class="col ">
                     <div class="card mt-4 mx-5 w-75">
                         <a href="{% url 'post' %}">
@@ -56,15 +56,34 @@
         <div class="row justify-content-center mt-5">
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
+            {% if posts.has_previous %} 
               <li class="page-item">
-                <a class="page-link" href="#">Previous</a>
+                <a class="page-link" href="?page=1">&laquo </a>
               </li>
-              <li class="page-item active"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
               <li class="page-item">
-                <a class="page-link" href="#">Next</a>
+                <a class="page-link" href="?page={{posts.previous_page_number}}">Previous</a>
               </li>
+            {%endif%}
+            {% if nums > 10%}
+              <li class="page-item disabled"><a class="page-link" href="#">
+                Page {{posts.number}} of {{posts.paginator.num_pages}}</a></li>
+            {%else%}
+             {%for i in nums%}
+                {%if forloop.counter == posts.number%}
+                    <li class="page-item active"><a class="page-link" href="?page={{posts.number}}">{{posts.number}}</a></li>
+                {%else%}
+                    <li class="page-item"><a class="page-link" href="?page={{forloop.counter}}">{{forloop.counter}}</a></li>
+                {%endif%}
+             {%endfor%}
+            {%endif%}
+             {% if posts.has_next %}
+              <li class="page-item">
+                <a class="page-link" href="?page={{posts.next_page_number}}">Next</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="?page={{posts.paginator.num_pages}}">&raquo </a>
+              </li>
+            {%endif%}
             </ul>
         </nav>
         </div>
