--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -64,7 +64,7 @@
                 <a class="page-link" href="?page={{posts.previous_page_number}}">Previous</a>
               </li>
             {%endif%}
-            {% if nums > 10%}
+            {% if posts.paginator.num_pages > 10%}
               <li class="page-item disabled"><a class="page-link" href="#">
                 Page {{posts.number}} of {{posts.paginator.num_pages}}</a></li>
             {%else%}
