--- a/app/templates/app/settings.html
+++ b/app/templates/app/settings.html
@@ -35,21 +35,21 @@
                         {% endif%}
                       </div>
                         {% csrf_token %}
-                        <div class="col-auto mx-auto">
+                        <div class="mx-auto mb-3 w-75">
                             <label for="inputOldPassword" class="form-label">Old Password</label>
                             <input type="password" class="form-control" id="inputPassword" placeholder = "Type old password" name="old_pass">
                         </div>
                     
-                        <div class="col-auto mx-auto">
+                        <div class="mx-auto mb-3 w-75">
                             <label for="inputNewPassword" class="form-label">New Password</label>
                             <input type="password" class="form-control" id="inputPassword" placeholder = "Type new password" name = "pass">
                         </div>
                     
-                        <div class="col-auto mx-auto">
+                        <div class="mx-auto mb-3 w-75">
                             <label for="inputConfirmNewPassword" class="form-label">Confirm New Password</label>
                             <input type="password" class="form-control" id="inputPassword" placeholder = "Confirm new password" name ="rpass">
                         </div>
-                        <div class="col-auto mx-auto mt-4">
+                        <div class="mx-auto mt-2 w-auto">
                             <button type="submit" class="btn btn-primary" name = "Security" value = "ChangePassword">Change password</button>
                         </div>
                     </form>
