--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -166,16 +166,33 @@
   
                         <!-- Comment section -->
                         <h3>Comments:</h3>
-                        {% for comment in comments %}
-                            <p>{{ comment.content }}</p>
-                        {% endfor %}
-                        
                         <!-- Comment form -->
                         <form method="POST" action="{% url 'post' post.id %}">
                             {% csrf_token %}
                             <textarea name="comment_content" placeholder="Write a comment"></textarea>
                             <button type="submit" name="action" value="comment">Post Comment</button>
                         </form>
+                        {% for comment in comments %}
+                            <div class="comment">
+                                <p><strong>{{ comment.user.username }}</strong> - {{ comment.created_at|timesince }} ago</p>
+                                <p>{{ comment.content }}</p>
+                            </div>
+
+                            {% if forloop.counter|divisibleby:10 and not forloop.last %}
+                                <div class="pagination">
+                                    <a href="?page={{ comments.next_page_number }}">Next</a>
+                                    <a href="?page={{ comments.paginator.num_pages }}">Last</a>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+
+                        <!-- Pagination for remaining comments -->
+                        {% if comments.paginator.num_pages > 1 and not comments|length_is:forloop.counter %}
+                            <div class="pagination">
+                                <a href="?page={{ comments.next_page_number }}">Next</a>
+                                <a href="?page={{ comments.paginator.num_pages }}">Last</a>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -188,6 +205,7 @@
 
 <script src="" async defer></script>
 </body>
+
 </html>
 
 {% endblock main-content %}
