--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -219,7 +219,13 @@
     {% endif %}
     </div>
 
-    
+
+    <!-- Hide and Delete post-->
+     <hr class="my-4">
+        <div class="d-grid gap-2 d-md-flex col-6 mx-auto">
+             <a type="button" class="btn btn-secondary btn-lg col-sm-6" href="{% url 'home' %}">Hide Post</a>
+            <a type="submit" class="btn btn-danger btn-lg col-sm-6" href="#">Delete Post</a>
+         </div>
 </section>
 
 <script src="" async defer></script>
