--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -171,14 +171,26 @@
             
     <form method="POST" action="{% url 'post' post.id %}">
         {% csrf_token %}
+
+        {% if post.is_liked%}
+        <button type="submit" name="action" value="like" class ="btn btn-primary btn-lg mx-2"><i class="bi bi-hand-thumbs-up-fill "></i></i> ({{ post.likes.count }})</button>
+        {% else %}
         <button type="submit" name="action" value="like" class ="btn btn-secondary btn-lg mx-2"><i class="bi bi-hand-thumbs-up "></i></i> ({{ post.likes.count }})</button>
-        <button type="submit" name="action" value="dislike" class ="btn btn-secondary btn-lg mx-2"><i class="bi bi-hand-thumbs-down "></i> ({{ post.dislikes.count }})</button>
+        {% endif %}
+
+        {% if  post.is_disliked%}
+        <button type="submit" name="action" value="dislike" class ="btn btn-danger btn-lg mx-2"><i class="bi bi-hand-thumbs-down-fill "></i> ({{ post.dislikes.count }})</button>
+        {% else %}
+        <button type="submit" name="action" value="dislike" class ="btn btn-secondary btn-lg mx-2"><i class="bi bi-hand-thumbs-down "></i></i> ({{ post.dislikes.count }})</button>
+        {% endif %}
+    
+
     </form>
     <div class="col-md-8 col-sm-12 text-center">
     <!-- Comment section -->
     <h1>Comments:</h1>
-</div>
-</div>
+    </div>
+    </div>
     <!-- Comment form -->
     <form method="POST" action="{% url 'post' post.id %}">
         {% csrf_token %}
@@ -221,11 +233,14 @@
 
 
     <!-- Hide and Delete post-->
+    {% if user.is_employer%}
      <hr class="my-4">
         <div class="d-grid gap-2 d-md-flex col-6 mx-auto">
              <a type="button" class="btn btn-secondary btn-lg col-sm-6" href="{% url 'home' %}">Hide Post</a>
             <a type="submit" class="btn btn-danger btn-lg col-sm-6" href="#">Delete Post</a>
          </div>
+    {% endif %}
+
 </section>
 
 <script src="" async defer></script>
