Add Select fields

--- a/app/templates/app/post/publish.html
+++ b/app/templates/app/post/publish.html
@@ -68,6 +68,31 @@
                                         </div>
 
                                         <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <label for="inputGender" class="form-label">Field :</label>
+                                                <select class="form-select" aria-label="Default select example">
+                                                    <option selected>Field</option>
+                                                    <option value="1">Medicine</option>
+                                                    <option value="2">Law</option>
+                                                    <option value="3">Information Technology</option>
+                                                    <option value="4">Finance and Banking</option>
+                                                    <option value="5">Business Management</option>
+                                                    <option value="6">Education</option>
+                                                    <option value="7">Insurance Business</option>
+                                                    <option value="8">Real Estate</option>
+                                                    <option value="9">Tourism</option>
+                                                    <option value="10">Electronics/Electricity</option>
+                                                    <option value="11">Architecture</option>
+                                                    <option value="12">Tourism</option>
+                                                    <option value="13">Hotel and Restaurant</option>
+                                                    <option value="14">Construction/Building</option>
+                                                    <option value="15">Finacial Investment</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <label for="inputJob" class="form-label">Job</label>
